; ModuleID = '/home/carl/AnghaBench/reactos/dll/cpl/appwiz/extr_createlink.c_IsExtensionAShortcut.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/cpl/appwiz/extr_createlink.c_IsExtensionAShortcut.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@HKEY_CLASSES_ROOT = common dso_local global i32 0, align 4
@KEY_READ = common dso_local global i32 0, align 4
@ERROR_SUCCESS = common dso_local global i64 0, align 8
@FALSE = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@REG_SZ = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @IsExtensionAShortcut(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca [100 x i32], align 16
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  %8 = load i32, i32* @HKEY_CLASSES_ROOT, align 4
  %9 = load i32*, i32** %3, align 8
  %10 = load i32, i32* @KEY_READ, align 4
  %11 = call i64 @RegOpenKeyExW(i32 %8, i32* %9, i32 0, i32 %10, i32* %4)
  %12 = load i64, i64* @ERROR_SUCCESS, align 8
  %13 = icmp ne i64 %11, %12
  br i1 %13, label %14, label %16

14:                                               ; preds = %1
  %15 = load i32, i32* @FALSE, align 4
  store i32 %15, i32* %2, align 4
  br label %62

16:                                               ; preds = %1
  %17 = load i32, i32* %4, align 4
  %18 = call i64 @IsShortcut(i32 %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %24

20:                                               ; preds = %16
  %21 = load i32, i32* %4, align 4
  %22 = call i32 @RegCloseKey(i32 %21)
  %23 = load i32, i32* @TRUE, align 4
  store i32 %23, i32* %2, align 4
  br label %62

24:                                               ; preds = %16
  store i64 400, i64* %6, align 8
  %25 = load i32, i32* %4, align 4
  %26 = getelementptr inbounds [100 x i32], [100 x i32]* %5, i64 0, i64 0
  %27 = ptrtoint i32* %26 to i32
  %28 = call i64 @RegQueryValueEx(i32 %25, i32* null, i32* null, i64* %7, i32 %27, i64* %6)
  %29 = load i64, i64* @ERROR_SUCCESS, align 8
  %30 = icmp ne i64 %28, %29
  br i1 %30, label %35, label %31

31:                                               ; preds = %24
  %32 = load i64, i64* %7, align 8
  %33 = load i64, i64* @REG_SZ, align 8
  %34 = icmp ne i64 %32, %33
  br i1 %34, label %35, label %39

35:                                               ; preds = %31, %24
  %36 = load i32, i32* %4, align 4
  %37 = call i32 @RegCloseKey(i32 %36)
  %38 = load i32, i32* @FALSE, align 4
  store i32 %38, i32* %2, align 4
  br label %62

39:                                               ; preds = %31
  %40 = load i32, i32* %4, align 4
  %41 = call i32 @RegCloseKey(i32 %40)
  %42 = load i32, i32* @HKEY_CLASSES_ROOT, align 4
  %43 = getelementptr inbounds [100 x i32], [100 x i32]* %5, i64 0, i64 0
  %44 = load i32, i32* @KEY_READ, align 4
  %45 = call i64 @RegOpenKeyExW(i32 %42, i32* %43, i32 0, i32 %44, i32* %4)
  %46 = load i64, i64* @ERROR_SUCCESS, align 8
  %47 = icmp ne i64 %45, %46
  br i1 %47, label %48, label %50

48:                                               ; preds = %39
  %49 = load i32, i32* @FALSE, align 4
  store i32 %49, i32* %2, align 4
  br label %62

50:                                               ; preds = %39
  %51 = load i32, i32* %4, align 4
  %52 = call i64 @IsShortcut(i32 %51)
  %53 = icmp ne i64 %52, 0
  br i1 %53, label %54, label %58

54:                                               ; preds = %50
  %55 = load i32, i32* %4, align 4
  %56 = call i32 @RegCloseKey(i32 %55)
  %57 = load i32, i32* @TRUE, align 4
  store i32 %57, i32* %2, align 4
  br label %62

58:                                               ; preds = %50
  %59 = load i32, i32* %4, align 4
  %60 = call i32 @RegCloseKey(i32 %59)
  %61 = load i32, i32* @FALSE, align 4
  store i32 %61, i32* %2, align 4
  br label %62

62:                                               ; preds = %58, %54, %48, %35, %20, %14
  %63 = load i32, i32* %2, align 4
  ret i32 %63
}

declare dso_local i64 @RegOpenKeyExW(i32, i32*, i32, i32, i32*) #1

declare dso_local i64 @IsShortcut(i32) #1

declare dso_local i32 @RegCloseKey(i32) #1

declare dso_local i64 @RegQueryValueEx(i32, i32*, i32*, i64*, i32, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
